# ScreenCapture

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnao/screencapture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  packt.h
app/src/main/cpp/librtmp/: rtmp.c
app/src/main/java/com/dongnao/screencapture/: AudioCodec.java  AudioSpecificConfig.java  IFrame.java  MainActivity.java  RtmpManager.java  VideoCodec.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/dongnao/screencapture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
